--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -23,6 +23,12 @@
                             </button>
                             <div class="collapse" id="number_tasks-collapse">
                                 <ul class="btn-toggle-nav list-unstyled fw-normal mt-1 small">
+                                    <div class="d-flex justify-content-center mb-2"> <!-- Центрируем кнопки -->
+                                        <button type="button" class="btn btn-outline-secondary" style="width: 80%;" onclick="checkAllCheckboxes()">Выбрать все</button>
+                                    </div>
+                                    <div class="d-flex justify-content-center mb-2">
+                                        <button type="button" class="btn btn-outline-secondary" style="width: 80%;" onclick="uncheckAllCheckboxes()">Сбросить все</button>
+                                    </div>
                                     {% for i in range(1, 28) %}
                                     <li class="ms-3">
                                         <div class="checkbox-wrapper-21">
@@ -32,7 +38,7 @@
                                                 <div class="control__indicator"></div>
                                             </label>
                                         </div>
-                                    </li>                  
+                                    </li>                        
                                     {% endfor %}
                                 </ul>
                             </div>
@@ -73,11 +79,11 @@
             <h1 align="center" class="pt-2 pb-2">Задачи ЕГЭ</h1>
             {% for task, tags_for_task in tasks %}
                 <div class="task-item border rounded p-3 mb-3">
-                    <p>({{task["source"]}}) №{{task["number"]}} {{task["statement"]}}</p>
+                    <p><b>({{task["source"]}}) №{{task["number"]}}</b> <br>{{task["statement"]|safe}}</p>
                     {% if task.file_name == None %}
                     {% elif task.file_name[-3:] == "png" or task.file_name[-3:] == "jpg" %}
                         <img src="/static/img/{{task.file_name}}" class="img-fluid m-2" alt="..." width="40%">
-                    {% elif task.file_name[-3:] == "txt" or task.file_name[-3:] == "xls" or task.file_name[-4:] == "xlsx" %}
+                    {% elif task.file_name[-3:] == "txt" or task.file_name[-4:] == "xlsx" %}
                         <a href="/static/img/{{task.file_name}}" style="color:black" download>Скачать файл</a>
                     {% endif %}
                     <p>
@@ -219,6 +225,21 @@
         document.body.appendChild(link);
         link.click(); // Программно кликаем по ссылке
         document.body.removeChild(link); // Удаляем ссылку из документа
+    }
+
+    function checkAllCheckboxes() {
+        const checkboxes = document.querySelectorAll('input[type="checkbox"]');
+        checkboxes.forEach(checkbox => {
+            checkbox.checked = true;
+        });
+    }
+
+    // Функция для сброса всех чекбоксов
+    function uncheckAllCheckboxes() {
+        const checkboxes = document.querySelectorAll('input[type="checkbox"]');
+        checkboxes.forEach(checkbox => {
+            checkbox.checked = false;
+        });
     }
 </script>
 {% endblock %}
